--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 2-React-with-vite\vite-project\node_modules
 3-Tic-Tac-Toe\3-tic-tac-toe\node_modules
+4-shopping-notes\4-shopping-notes\node_modules
